added important fix for new omnet and inet version

--- a/simulations/FinalCompleteSimulation/omnetpp.ini
+++ b/simulations/FinalCompleteSimulation/omnetpp.ini
@@ -1,6 +1,13 @@
 [General]
 
 num-rngs = 3
+sim-time-limit = 40s
+
+##########################################################
+#              Cellular network configurator             #
+##########################################################
+*.configurator.config = xmldoc("./demo.xml")
+
 ##########################################################
 #              NR specific parameters                   #
 ##########################################################
@@ -107,7 +114,9 @@ sim-time-limit=40s
 *.ue2.app[1].positionY = 411
 *.ue2.app[1].radius = 30
 
-*.ue*.mobilityType = "LinearMobility"
+
+# MOBILITY
+*.ue*.mobility.typename = "LinearMobility"
 **.ue*.mobility.initialMovementHeading = 0deg
 **.ue*.mobility.speed = 10mps
 
