Update simulation with AMS scenario

--- a/simulations/AMSRealScenario/omnetpp.ini
+++ b/simulations/AMSRealScenario/omnetpp.ini
@@ -71,23 +71,43 @@ sim-time-limit=40s
 *.server.app[1].startTime = 0.02s
 
 ##------------MecCar configuration---------------
-*.car*.numApps = 1
-*.car*.viApp.localPort = 2222
+*.car.numApps = 1
+*.car.viApp.localPort = 2222
 *.car.viApp.localAddress = "car"
-*.car2.viApp.localAddress = "car2"
-*.car*.viApp.vimAddress = "mechost1.vim"
-*.car*.viApp.vimPort = 3333
-*.car*.viApp.mp1Address = "mechost1.mecPlatform"
-*.car*.viApp.mp1Port = 10021
-*.car*.app[0].typename = "ClientResourceApp"
-*.car*.app[0].localPort = 3333
+#*.car2.viApp.localAddress = "car2"
+*.car.viApp.vimAddress = "mechost1.vim"
+*.car.viApp.vimPort = 3333
+*.car.viApp.mp1Address = "mechost1.mecPlatform"
+*.car.viApp.mp1Port = 10021
+*.car.app[0].typename = "ClientResourceApp"
+*.car.app[0].localPort = 3333
 #*.car.app[0].destPort = 3333
-*.car*.app[0].destAddress = "server" 
+*.car.app[0].destAddress = "server" 
 *.car.app[0].localAddress = "car"
+#*.car2.app[0].localAddress = "car2"
+*.car.app[0].viPort = 2222
+*.car.app[0].startTime = 0.05s
+*.car.app[0].parkTime = 30s
+
+*.car2.numApps = 2
+*.car2.viApp.localPort = 2222
+*.car2.viApp.localAddress = "car2"
+*.car2.viApp.vimAddress = "mechost1.vim"
+*.car2.viApp.vimPort = 3333
+*.car2.viApp.mp1Address = "mechost1.mecPlatform"
+*.car2.viApp.mp1Port = 10021
+*.car2.app[0].typename = "ClientResourceApp"
+*.car2.app[0].localPort = 3333
+*.car2.app[0].destAddress = "server"
 *.car2.app[0].localAddress = "car2"
-*.car*.app[0].viPort = 2222
-*.car*.app[0].startTime = 0.05s
-*.car*.app[0].parkTime = 30s
+*.car2.app[0].viPort = 2222
+*.car2.app[0].startTime = 0.05s
+*.car2.app[0].parkTime = 30s
+*.car2.app[1].typename = "TriggerAMS"
+*.car2.app[1].localAddress = "car2"
+*.car2.app[1].remotePort = 10022
+*.car2.app[1].remoteAddress = "mechost1.mecPlatform"
+
 
 ##------------UEWarningAlertApp---------------
 *.ue*.numApps = 2
