vim triggering mobility procedure notification

--- a/simulations/AMSRealScenario/omnetpp.ini
+++ b/simulations/AMSRealScenario/omnetpp.ini
@@ -98,9 +98,9 @@ sim-time-limit=40s
 #*.car2.app[0].localAddress = "car2"
 *.car.app[0].viPort = 2222
 *.car.app[0].startTime = 0.05s
-*.car.app[0].parkTime = 30s
+*.car.app[0].parkTime = 3s
 
-*.car2.numApps = 2
+*.car2.numApps = 1
 *.car2.viApp.localPort = 2222
 *.car2.viApp.localAddress = "car2"
 *.car2.viApp.vimAddress = "mechost1.vim"
@@ -114,10 +114,10 @@ sim-time-limit=40s
 *.car2.app[0].viPort = 2222
 *.car2.app[0].startTime = 0.05s
 *.car2.app[0].parkTime = 30s
-*.car2.app[1].typename = "TriggerAMS"
-*.car2.app[1].localAddress = "car2"
-*.car2.app[1].remotePort = 10022
-*.car2.app[1].remoteAddress = "mechost1.mecPlatform"
+#*.car2.app[1].typename = "TriggerAMS"
+#*.car2.app[1].localAddress = "car2"
+#*.car2.app[1].remotePort = 10022
+#*.car2.app[1].remoteAddress = "mechost1.mecPlatform"
 
 
 ##------------UEWarningAlertApp---------------
@@ -131,6 +131,8 @@ sim-time-limit=40s
 *.ue*.app[1].typename = "UEWarningAlertApp"
 #
 *.ue.app[1].deviceAppAddress = "ue"
+*.ue.app[1].amsAddress = "mechost1.mecPlatform"
+*.ue.app[1].amsPort = 10022
 #*.ue2.app[1].deviceAppAddress = "ue2"
 *.ue*.app[1].deviceAppPort = 4500
 *.ue*.app[1].startTime = 0.5s										#when sending start warning alert app									#period to sending messages
