Added simulation with multiple devices

--- a/simulations/dynamicMECHost/omnetpp.ini
+++ b/simulations/dynamicMECHost/omnetpp.ini
@@ -61,8 +61,21 @@ sim-time-limit = 60s
 
 
 [Config TestSubscription]
-network = simulation_examples.simulations.AMSRealScenario.FinalNetwork
+network = simulation_examples.simulations.dynamicMECHost.ParkNetwork
 sim-time-limit=40s
+
+############# Floorplan parameters ################
+**.mobility.constraintAreaMaxX = 1000m
+**.mobility.constraintAreaMaxY = 750m
+**.mobility.constraintAreaMinX = 0m
+**.mobility.constraintAreaMinY = 250m
+**.mobility.constraintAreaMinZ = 0m
+**.mobility.constraintAreaMaxZ = 0m
+**.mobility.initFromDisplayString = false
+
+############### BS position #################
+*.gNodeB1.mobility.initialX = 139m
+*.gNodeB1.mobility.initialY = 302m
 
 #------------Server configuration---------------
 *.server.numApps = 2
@@ -70,87 +83,92 @@ sim-time-limit=40s
 *.server.app[1].typename = "ResourceRegisterApp"
 *.server.app[1].startTime = 0.02s
 
-# Tester modules
-#*.server.app[2].typename = "MobilityTester" # mecapp registration
-#*.server.app[2].localAddress = "server"
-#*.server.app[2].remoteAddress = "mechost1.mecPlatform"
-#*.server.app[2].remotePort = 10022
-#
-#*.server.app[3].typename = "TriggerAMS" # notification trigger
-#*.server.app[3].localAddress = "server"
-#*.server.app[3].remoteAddress = "mechost1.mecPlatform"
-#*.server.app[3].remotePort = 10022
 
 ##------------MecCar configuration---------------
-*.car.numApps = 1
-*.car.viApp.localPort = 2222
-*.car.viApp.localAddress = "car"
-#*.car2.viApp.localAddress = "car2"
-*.car.viApp.vimAddress = "mechost1.vim"
-*.car.viApp.vimPort = 3333
-*.car.viApp.mp1Address = "mechost1.mecPlatform"
-*.car.viApp.mp1Port = 10021
-*.car.app[0].typename = "ClientResourceApp"
-*.car.app[0].localPort = 3333
+**.numParkedCar = 2
+**.numUe = 3
+*.car[*].numApps = 1
+*.car[*].viApp.localPort = 2222
+*.car[0].viApp.localAddress = "car[0]"
+*.car[1].viApp.localAddress = "car[1]"
+*.car[*].viApp.vimAddress = "mechost1.vim"
+*.car[*].viApp.vimPort = 3333
+*.car[*].viApp.mp1Address = "mechost1.mecPlatform"
+*.car[*].viApp.mp1Port = 10021
+*.car[*].app[0].typename = "ClientResourceApp"
+*.car[*].app[0].localPort = 3333
 #*.car.app[0].destPort = 3333
-*.car.app[0].destAddress = "server" 
-*.car.app[0].localAddress = "car"
+*.car[*].app[0].destAddress = "server" 
+*.car[0].app[0].localAddress = "car[0]"
 #*.car2.app[0].localAddress = "car2"
-*.car.app[0].viPort = 2222
-*.car.app[0].startTime = 0.05s
-*.car.app[0].parkTime = 3s
+*.car[*].app[0].viPort = 2222
+*.car[*].app[0].startTime = 0.05s
+*.car[0].app[0].parkTime = 8s
 
-*.car2.numApps = 1
-*.car2.viApp.localPort = 2222
-*.car2.viApp.localAddress = "car2"
-*.car2.viApp.vimAddress = "mechost1.vim"
-*.car2.viApp.vimPort = 3333
-*.car2.viApp.mp1Address = "mechost1.mecPlatform"
-*.car2.viApp.mp1Port = 10021
-*.car2.app[0].typename = "ClientResourceApp"
-*.car2.app[0].localPort = 3333
-*.car2.app[0].destAddress = "server"
-*.car2.app[0].localAddress = "car2"
-*.car2.app[0].viPort = 2222
-*.car2.app[0].startTime = 0.05s
-*.car2.app[0].parkTime = 10s
-#*.car2.app[1].typename = "TriggerAMS"
-#*.car2.app[1].localAddress = "car2"
-#*.car2.app[1].remotePort = 10022
-#*.car2.app[1].remoteAddress = "mechost1.mecPlatform"
+*.car[1].app[0].localAddress = "car[1]"
+*.car[1].app[0].viPort = 2222
+*.car[1].app[0].startTime = 0.05s
+*.car[1].app[0].parkTime = 30s
 
+##------------CAR initial position---------------
+**.car[*].mobility.initialX = 80m
+**.car[0].mobility.initialY = 280m
+**.car[1].mobility.initialY = 310m
 
 ##------------UEWarningAlertApp---------------
-*.ue*.numApps = 2
-*.ue*.app[0].typename = "DeviceApp"
-*.ue*.app[0].localPort = 4500
-*.ue*.app[0].UALCMPAddress = "ualcmp"
-*.ue*.app[0].UALCMPPort = 1000
-*.ue*.app[0].appPackageSource = "ApplicationDescriptors/WarningAlertApp.json"
+*.ue[*].numApps = 2
+*.ue[*].app[0].typename = "DeviceApp"
+*.ue[*].app[0].localPort = 4500
+*.ue[*].app[0].UALCMPAddress = "ualcmp"
+*.ue[*].app[0].UALCMPPort = 1000
+*.ue[*].app[0].appPackageSource = "ApplicationDescriptors/WarningAlertApp.json"
 ##
-*.ue*.app[1].typename = "UEWarningAlertApp"
+*.ue[*].app[1].typename = "UEWarningAlertApp"
+
+# set address
+*.ue[0].app[1].deviceAppAddress = "ue[0]"
+*.ue[1].app[1].deviceAppAddress = "ue[1]"
+*.ue[2].app[1].deviceAppAddress = "ue[2]"
+#*.ue[3].app[1].deviceAppAddress = "ue[3]"
+
+*.ue[*].app[1].amsAddress = "mechost1.mecPlatform"
+*.ue[*].app[1].amsPort = 10022
+*.ue[*].app[1].deviceAppPort = 4500
+*.ue[*].app[1].startTime = 0.5s										#when sending start warning alert app									#period to sending messages
+*.ue[*].app[1].stopTime = 25s
 #
-*.ue.app[1].deviceAppAddress = "ue"
-*.ue*.app[1].amsAddress = "mechost1.mecPlatform"
-*.ue*.app[1].amsPort = 10022
-*.ue2.app[1].deviceAppAddress = "ue2"
-*.ue*.app[1].deviceAppPort = 4500
-*.ue*.app[1].startTime = 0.5s										#when sending start warning alert app									#period to sending messages
-*.ue*.app[1].stopTime = 25s
+*.ue[*].app[1].positionX = 340
+*.ue[0].app[1].positionY = 411
+*.ue[0].app[1].radius = 30
+
+*.ue[1].app[1].positionY = 311
+*.ue[1].app[1].radius = 30
+
+*.ue[2].app[1].positionY = 511
+*.ue[2].app[1].radius = 30
+
+*.ue[3].app[1].positionY = 611
+*.ue[3].app[1].radius = 30
+
 #
-*.ue.app[1].positionX = 340
-*.ue.app[1].positionY = 311
-*.ue.app[1].radius = 30
-#
-*.ue2.app[1].positionX = 340
-*.ue2.app[1].positionY = 411
-*.ue2.app[1].radius = 30
+#*.ue2.app[1].positionX = 340
+#*.ue2.app[1].positionY = 411
+#*.ue2.app[1].radius = 30
 #
 #
-## MOBILITY
-*.ue*.mobility.typename = "LinearMobility"
-**.ue*.mobility.initialMovementHeading = 0deg
-**.ue*.mobility.speed = 10mps
+## UEs INITIAL POSITIONs
+*.ue[*].mobility.typename = "LinearMobility"
+**.ue[0].mobility.initialX = 250m
+**.ue[0].mobility.initialY = 411m
+**.ue[1].mobility.initialX = 200m
+**.ue[1].mobility.initialY = 311m
+**.ue[2].mobility.initialX = 150m
+**.ue[2].mobility.initialY = 511m
+**.ue[3].mobility.initialX = 150m
+**.ue[3].mobility.initialY = 611m
+**.ue[*].mobility.initialMovementHeading = 0deg
+**.ue[*].mobility.speed = 10mps
+
 
 # UALCMP config
 *.ualcmp.isMEOapp = true
