ten vehicles configuration file

--- a/simulations/dynamicMECHost/omnetpp.ini
+++ b/simulations/dynamicMECHost/omnetpp.ini
@@ -65,8 +65,8 @@ network = simulation_examples.simulations.dynamicMECHost.ParkNetwork
 sim-time-limit=40s
 
 ############# Floorplan parameters ################
-**.mobility.constraintAreaMaxX = 1000m
-**.mobility.constraintAreaMaxY = 750m
+**.mobility.constraintAreaMaxX = 2000m
+**.mobility.constraintAreaMaxY = 2000m
 **.mobility.constraintAreaMinX = 0m
 **.mobility.constraintAreaMinY = 250m
 **.mobility.constraintAreaMinZ = 0m
@@ -86,7 +86,7 @@ sim-time-limit=40s
 
 ##------------MecCar configuration---------------
 **.numParkedCar = 2
-**.numUe = 3
+**.numUe = 11
 *.car[*].numApps = 1
 *.car[*].viApp.localPort = 2222
 *.car[0].viApp.localAddress = "car[0]"
@@ -129,7 +129,14 @@ sim-time-limit=40s
 *.ue[0].app[1].deviceAppAddress = "ue[0]"
 *.ue[1].app[1].deviceAppAddress = "ue[1]"
 *.ue[2].app[1].deviceAppAddress = "ue[2]"
-#*.ue[3].app[1].deviceAppAddress = "ue[3]"
+*.ue[3].app[1].deviceAppAddress = "ue[3]"
+*.ue[4].app[1].deviceAppAddress = "ue[4]"
+*.ue[5].app[1].deviceAppAddress = "ue[5]"
+*.ue[6].app[1].deviceAppAddress = "ue[6]"
+*.ue[7].app[1].deviceAppAddress = "ue[7]"
+*.ue[8].app[1].deviceAppAddress = "ue[8]"
+*.ue[9].app[1].deviceAppAddress = "ue[9]"
+*.ue[10].app[1].deviceAppAddress = "ue[10]"
 
 *.ue[*].app[1].amsAddress = "mechost1.mecPlatform"
 *.ue[*].app[1].amsPort = 10022
@@ -150,6 +157,28 @@ sim-time-limit=40s
 *.ue[3].app[1].positionY = 611
 *.ue[3].app[1].radius = 30
 
+*.ue[4].app[1].positionY = 711
+*.ue[4].app[1].radius = 30
+
+*.ue[5].app[1].positionY = 811
+*.ue[5].app[1].radius = 30
+
+*.ue[6].app[1].positionY = 911
+*.ue[6].app[1].radius = 30
+
+*.ue[7].app[1].positionY = 1011
+*.ue[7].app[1].radius = 30
+
+*.ue[8].app[1].positionY = 1111
+*.ue[8].app[1].radius = 30
+
+*.ue[9].app[1].positionY = 1211
+*.ue[9].app[1].radius = 30
+
+*.ue[10].app[1].positionY = 1311
+*.ue[10].app[1].radius = 30
+
+
 #
 #*.ue2.app[1].positionX = 340
 #*.ue2.app[1].positionY = 411
@@ -158,14 +187,18 @@ sim-time-limit=40s
 #
 ## UEs INITIAL POSITIONs
 *.ue[*].mobility.typename = "LinearMobility"
-**.ue[0].mobility.initialX = 250m
+**.ue[*].mobility.initialX = 250m
 **.ue[0].mobility.initialY = 411m
-**.ue[1].mobility.initialX = 200m
 **.ue[1].mobility.initialY = 311m
-**.ue[2].mobility.initialX = 150m
 **.ue[2].mobility.initialY = 511m
-**.ue[3].mobility.initialX = 150m
 **.ue[3].mobility.initialY = 611m
+**.ue[4].mobility.initialY = 711m
+**.ue[5].mobility.initialY = 811m
+**.ue[6].mobility.initialY = 911m
+**.ue[7].mobility.initialY = 1011m
+**.ue[8].mobility.initialY = 1111m
+**.ue[9].mobility.initialY = 1211m
+**.ue[10].mobility.initialY = 1311m
 **.ue[*].mobility.initialMovementHeading = 0deg
 **.ue[*].mobility.speed = 10mps
 
