--- a/simulations/dynamicMECHost/omnetpp.ini
+++ b/simulations/dynamicMECHost/omnetpp.ini
@@ -27,6 +27,7 @@ sim-time-limit = 60s
 *.gNodeB1.cellularNic.numCarriers = 1
 *.gNodeB1.cellularNic.channelModel[0].componentCarrierIndex = 0
 
+
 # UE Channel configuration
 *.ue*.cellularNic.numCarriers = 1
 *.ue*.cellularNic.nrChannelModel[0].componentCarrierIndex = 0
@@ -63,10 +64,11 @@ sim-time-limit = 60s
 [Config TestSubscription]
 network = simulation_examples.simulations.dynamicMECHost.ParkNetwork
 sim-time-limit=40s
+#*.gNodeB1.cellularNic.phy.
 
 ############# Floorplan parameters ################
 **.mobility.constraintAreaMaxX = 2000m
-**.mobility.constraintAreaMaxY = 2000m
+**.mobility.constraintAreaMaxY = 10000m
 **.mobility.constraintAreaMinX = 0m
 **.mobility.constraintAreaMinY = 250m
 **.mobility.constraintAreaMinZ = 0m
@@ -86,7 +88,7 @@ sim-time-limit=40s
 
 ##------------MecCar configuration---------------
 **.numParkedCar = 2
-**.numUe = 11
+**.numUe = 10
 *.car[*].numApps = 1
 *.car[*].viApp.localPort = 2222
 *.car[0].viApp.localAddress = "car[0]"
@@ -126,17 +128,29 @@ sim-time-limit=40s
 *.ue[*].app[1].typename = "UEWarningAlertApp"
 
 # set address
+
 *.ue[0].app[1].deviceAppAddress = "ue[0]"
-*.ue[1].app[1].deviceAppAddress = "ue[1]"
-*.ue[2].app[1].deviceAppAddress = "ue[2]"
-*.ue[3].app[1].deviceAppAddress = "ue[3]"
-*.ue[4].app[1].deviceAppAddress = "ue[4]"
-*.ue[5].app[1].deviceAppAddress = "ue[5]"
-*.ue[6].app[1].deviceAppAddress = "ue[6]"
-*.ue[7].app[1].deviceAppAddress = "ue[7]"
-*.ue[8].app[1].deviceAppAddress = "ue[8]"
-*.ue[9].app[1].deviceAppAddress = "ue[9]"
-*.ue[10].app[1].deviceAppAddress = "ue[10]"
+*.ue[*].app[1].deviceAppAddress = "ue[" + string(parentIndex()) + "]"
+#*.ue[1].app[1].deviceAppAddress = "ue[1]"
+#*.ue[2].app[1].deviceAppAddress = "ue[2]"
+#*.ue[3].app[1].deviceAppAddress = "ue[3]"
+#*.ue[4].app[1].deviceAppAddress = "ue[4]"
+#*.ue[5].app[1].deviceAppAddress = "ue[5]"
+#*.ue[6].app[1].deviceAppAddress = "ue[6]"
+#*.ue[7].app[1].deviceAppAddress = "ue[7]"
+#*.ue[8].app[1].deviceAppAddress = "ue[8]"
+#*.ue[9].app[1].deviceAppAddress = "ue[9]"
+#*.ue[10].app[1].deviceAppAddress = "ue[10]"
+#*.ue[11].app[1].deviceAppAddress = "ue[11]"
+#*.ue[12].app[1].deviceAppAddress = "ue[12]"
+#*.ue[13].app[1].deviceAppAddress = "ue[13]"
+#*.ue[14].app[1].deviceAppAddress = "ue[14]"
+#*.ue[15].app[1].deviceAppAddress = "ue[15]"
+#*.ue[16].app[1].deviceAppAddress = "ue[16]"
+#*.ue[17].app[1].deviceAppAddress = "ue[17]"
+#*.ue[18].app[1].deviceAppAddress = "ue[18]"
+#*.ue[19].app[1].deviceAppAddress = "ue[19]"
+#*.ue[20].app[1].deviceAppAddress = "ue[20]"
 
 *.ue[*].app[1].amsAddress = "mechost1.mecPlatform"
 *.ue[*].app[1].amsPort = 10022
@@ -145,38 +159,48 @@ sim-time-limit=40s
 *.ue[*].app[1].stopTime = 25s
 #
 *.ue[*].app[1].positionX = 340
-*.ue[0].app[1].positionY = 411
-*.ue[0].app[1].radius = 30
+*.ue[*].app[1].positionY = 411
+*.ue[*].app[1].radius = 30
 
-*.ue[1].app[1].positionY = 311
-*.ue[1].app[1].radius = 30
+#*.ue[*].app[1].positionY = 311
 
-*.ue[2].app[1].positionY = 511
-*.ue[2].app[1].radius = 30
+#*.ue[2].app[1].positionY = 511
+#
+#*.ue[3].app[1].positionY = 611
+#
+#*.ue[4].app[1].positionY = 711
+#
+#*.ue[5].app[1].positionY = 811
+#
+#*.ue[6].app[1].positionY = 911
+#
+#*.ue[7].app[1].positionY = 1011
+#
+#*.ue[8].app[1].positionY = 1111
+##
+#*.ue[9].app[1].positionY = 1211
+#
+#*.ue[10].app[1].positionY = 1311
 
-*.ue[3].app[1].positionY = 611
-*.ue[3].app[1].radius = 30
+#*.ue[11].app[1].positionY = 1411
+#
+#*.ue[12].app[1].positionY = 1511
+#
+#*.ue[13].app[1].positionY = 1611
+#
+#*.ue[14].app[1].positionY = 1711
+#
+#*.ue[15].app[1].positionY = 1811
+#
+#*.ue[16].app[1].positionY = 1911
+#
+#*.ue[17].app[1].positionY = 2011
 
-*.ue[4].app[1].positionY = 711
-*.ue[4].app[1].radius = 30
-
-*.ue[5].app[1].positionY = 811
-*.ue[5].app[1].radius = 30
-
-*.ue[6].app[1].positionY = 911
-*.ue[6].app[1].radius = 30
-
-*.ue[7].app[1].positionY = 1011
-*.ue[7].app[1].radius = 30
-
-*.ue[8].app[1].positionY = 1111
-*.ue[8].app[1].radius = 30
-
-*.ue[9].app[1].positionY = 1211
-*.ue[9].app[1].radius = 30
-
-*.ue[10].app[1].positionY = 1311
-*.ue[10].app[1].radius = 30
+#*.ue[18].app[1].positionY = 2111
+#
+#*.ue[19].app[1].positionY = 2211
+#
+#*.ue[20].app[1].positionY = 2311
 
 
 #
@@ -188,17 +212,37 @@ sim-time-limit=40s
 ## UEs INITIAL POSITIONs
 *.ue[*].mobility.typename = "LinearMobility"
 **.ue[*].mobility.initialX = 250m
-**.ue[0].mobility.initialY = 411m
-**.ue[1].mobility.initialY = 311m
-**.ue[2].mobility.initialY = 511m
-**.ue[3].mobility.initialY = 611m
-**.ue[4].mobility.initialY = 711m
-**.ue[5].mobility.initialY = 811m
-**.ue[6].mobility.initialY = 911m
-**.ue[7].mobility.initialY = 1011m
-**.ue[8].mobility.initialY = 1111m
-**.ue[9].mobility.initialY = 1211m
-**.ue[10].mobility.initialY = 1311m
+**.ue[*].mobility.initialY = 411m
+#**.ue[1].mobility.initialY = 311m
+#**.ue[2].mobility.initialY = 511m
+#**.ue[3].mobility.initialY = 611m
+#**.ue[4].mobility.initialY = 711m
+#**.ue[5].mobility.initialY = 811m
+#**.ue[6].mobility.initialY = 911m
+#**.ue[7].mobility.initialY = 1011m
+#**.ue[8].mobility.initialY = 1111m
+#**.ue[9].mobility.initialY = 1211m
+#**.ue[10].mobility.initialY = 1311m
+#**.ue[11].mobility.initialY  = 1411m
+#
+#**.ue[12].mobility.initialY = 1511m
+#
+#**.ue[13].mobility.initialY = 1611m
+#
+#**.ue[14].mobility.initialY= 1711m
+#
+#**.ue[15].mobility.initialY = 1811m
+#
+#**.ue[16].mobility.initialY = 1911m
+#
+#**.ue[17].mobility.initialY = 2011m
+
+#**.ue[18].mobility.initialY = 2111m
+#
+#**.ue[19].mobility.initialY = 2211m
+#
+#**.ue[20].mobility.initialY = 2311m
+
 **.ue[*].mobility.initialMovementHeading = 0deg
 **.ue[*].mobility.speed = 10mps
 
