added example with multiple amount of UEs

--- a/simulations/dynamicMECHost/omnetpp.ini
+++ b/simulations/dynamicMECHost/omnetpp.ini
@@ -1,6 +1,12 @@
+# THE CHOICE OF THE PARAMETERS CAN BE MOTIVATED BY CITING THE PAPER: Simu5G: A system-level simulator for 5G networks
 [General]
 num-rngs = 3
 sim-time-limit = 60s
+output-scalar-file-append = false
+**.routingRecorder.enabled = false
+**.sctp.**.scalar-recording = false  # remove annoying statistics from SCTP
+**.sctp.**.vector-recording = false  # remove annoying statistics from SCTP
+**.vector-recording = false
 
 ##########################################################
 #              Cellular network configurator             #
@@ -20,6 +26,7 @@ sim-time-limit = 60s
 #######################################################
 #        CA and channel model configuration           # 
 #######################################################
+*.carrierAggregation.componentCarrier[0].numerologyIndex = 2
 *.carrierAggregation.numComponentCarriers = 1
 *.carrierAggregation.componentCarrier[0].numBands =  25 #${numBands=25}
 
@@ -88,7 +95,8 @@ sim-time-limit=40s
 
 ##------------MecCar configuration---------------
 **.numParkedCar = 2
-**.numUe = 10
+**.numUe = ${NUMUE=1..301 step 50}
+#**.numUe = 300
 *.car[*].numApps = 1
 *.car[*].viApp.localPort = 2222
 *.car[0].viApp.localAddress = "car[0]"
@@ -105,7 +113,7 @@ sim-time-limit=40s
 #*.car2.app[0].localAddress = "car2"
 *.car[*].app[0].viPort = 2222
 *.car[*].app[0].startTime = 0.05s
-*.car[0].app[0].parkTime = 8s
+*.car[0].app[0].parkTime = 40s
 
 *.car[1].app[0].localAddress = "car[1]"
 *.car[1].app[0].viPort = 2222
