Added unavailability graph

--- a/simulations/dynamicMECHost/omnetpp.ini
+++ b/simulations/dynamicMECHost/omnetpp.ini
@@ -6,7 +6,7 @@ output-scalar-file-append = false
 **.routingRecorder.enabled = false
 **.sctp.**.scalar-recording = false  # remove annoying statistics from SCTP
 **.sctp.**.vector-recording = false  # remove annoying statistics from SCTP
-**.vector-recording = false
+**.vector-recording = true
 
 ##########################################################
 #              Cellular network configurator             #
@@ -94,13 +94,13 @@ sim-time-limit=40s
 
 
 ##------------MecCar configuration---------------
-**.numParkedCar = 2
-**.numUe = ${NUMUE=1..301 step 50}
-#**.numUe = 300
+**.numParkedCar = 1
+**.numUe = ${NUMUE=60..120 step 30}
+#**.numUe = 100
 *.car[*].numApps = 1
 *.car[*].viApp.localPort = 2222
 *.car[0].viApp.localAddress = "car[0]"
-*.car[1].viApp.localAddress = "car[1]"
+#*.car[1].viApp.localAddress = "car[1]"
 *.car[*].viApp.vimAddress = "mechost1.vim"
 *.car[*].viApp.vimPort = 3333
 *.car[*].viApp.mp1Address = "mechost1.mecPlatform"
@@ -113,17 +113,17 @@ sim-time-limit=40s
 #*.car2.app[0].localAddress = "car2"
 *.car[*].app[0].viPort = 2222
 *.car[*].app[0].startTime = 0.05s
-*.car[0].app[0].parkTime = 40s
+*.car[0].app[0].parkTime = 7s
 
-*.car[1].app[0].localAddress = "car[1]"
-*.car[1].app[0].viPort = 2222
-*.car[1].app[0].startTime = 0.05s
-*.car[1].app[0].parkTime = 30s
+#*.car[1].app[0].localAddress = "car[1]"
+#*.car[1].app[0].viPort = 2222
+#*.car[1].app[0].startTime = 0.05s
+#*.car[1].app[0].parkTime = 30s
 
 ##------------CAR initial position---------------
 **.car[*].mobility.initialX = 80m
 **.car[0].mobility.initialY = 280m
-**.car[1].mobility.initialY = 310m
+#**.car[1].mobility.initialY = 310m
 
 ##------------UEWarningAlertApp---------------
 *.ue[*].numApps = 2
