Ping Times comparison graph

--- a/simulations/dynamicMECHost/omnetpp.ini
+++ b/simulations/dynamicMECHost/omnetpp.ini
@@ -94,8 +94,11 @@ sim-time-limit=40s
 
 
 ##------------MecCar configuration---------------
-**.numParkedCar = 1
-**.numUe = ${NUMUE=60..120 step 30}
+# use this for ping time comparison graph
+**.numParkedCar = ${NUMPARKED = int($SKIP)}
+
+#**.numParkedCar = 1
+**.numUe = ${NUMUE=10..150 step 10}
 #**.numUe = 100
 *.car[*].numApps = 1
 *.car[*].viApp.localPort = 2222
@@ -113,7 +116,7 @@ sim-time-limit=40s
 #*.car2.app[0].localAddress = "car2"
 *.car[*].app[0].viPort = 2222
 *.car[*].app[0].startTime = 0.05s
-*.car[0].app[0].parkTime = 7s
+*.car[0].app[0].parkTime = 40s
 
 #*.car[1].app[0].localAddress = "car[1]"
 #*.car[1].app[0].viPort = 2222
@@ -273,6 +276,8 @@ sim-time-limit=40s
 *.mechost*.vim.vimApp.brokerAddress = "server"
 #*.mechost*.vim.vimApp.searchType = "BEST_FIRST"
 *.mechost*.vim.vimApp.searchType = "ROUND_ROBIN"
+#*.mechost*.vim.vimApp.skipLocalResources = true
+*.mechost*.vim.vimApp.skipLocalResources = ${SKIP=true, false}
 *.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManager"
 *.mechost*.vim.vimApp.mepmPort = 3334
 *.mechost*.vim.vimApp.meoAddress = "mecOrchestrator"
