--- a/simulations/dynamicMECHost/omnetpp.ini
+++ b/simulations/dynamicMECHost/omnetpp.ini
@@ -73,6 +73,16 @@ network = simulation_examples.simulations.dynamicMECHost.ParkNetwork
 sim-time-limit=40s
 #*.gNodeB1.cellularNic.phy.
 
+############# Repetition ##########################
+repeat = 3
+seed-set = ${runnumber}
+
+experiment-label = "${configname}"
+measurement-label = "${iterationvars}"
+replication-label = "#${repetition}, seed-set=<seedset>"
+
+###################################################
+
 ############# Floorplan parameters ################
 **.mobility.constraintAreaMaxX = 2000m
 **.mobility.constraintAreaMaxY = 10000m
@@ -98,7 +108,7 @@ sim-time-limit=40s
 **.numParkedCar = ${NUMPARKED = int($SKIP)}
 
 #**.numParkedCar = 1
-**.numUe = ${NUMUE=10..150 step 10}
+**.numUe = ${NUMUE=10..100 step 10}
 #**.numUe = 100
 *.car[*].numApps = 1
 *.car[*].viApp.localPort = 2222
