--- a/simulations/downTimeDynMecHost/omnetpp.ini
+++ b/simulations/downTimeDynMecHost/omnetpp.ini
@@ -69,9 +69,19 @@ output-scalar-file-append = false
 
 
 [Config TestSubscription]
-network = simulation_examples.simulations.downTimeDynMecHost.ParkNetwork
+network = simulation_examples.simulations.dynamicMECHost.ParkNetwork
 sim-time-limit=40s
 #*.gNodeB1.cellularNic.phy.
+
+############# Repetition ##########################
+repeat = 3
+seed-set = ${runnumber}
+
+experiment-label = "${configname}"
+measurement-label = "${iterationvars}"
+replication-label = "#${repetition}, seed-set=<seedset>"
+
+###################################################
 
 ############# Floorplan parameters ################
 **.mobility.constraintAreaMaxX = 2000m
@@ -94,12 +104,15 @@ sim-time-limit=40s
 
 
 ##------------MecCar configuration---------------
-**.numParkedCar = 1
-**.numUe = ${NUMUE=60..120 step 30}
+# use this for ping time comparison graph
+#**.numParkedCar = ${NUMPARKED = int($SKIP)}
+
+**.numParkedCar = 30
+**.numUe = ${NUMUE=50..200 step 50}
 #**.numUe = 100
 *.car[*].numApps = 1
 *.car[*].viApp.localPort = 2222
-*.car[0].viApp.localAddress = "car[0]"
+*.car[*].viApp.localAddress = "car[" + string(parentIndex()) + "]"
 #*.car[1].viApp.localAddress = "car[1]"
 *.car[*].viApp.vimAddress = "mechost1.vim"
 *.car[*].viApp.vimPort = 3333
@@ -109,11 +122,11 @@ sim-time-limit=40s
 *.car[*].app[0].localPort = 3333
 #*.car.app[0].destPort = 3333
 *.car[*].app[0].destAddress = "server" 
-*.car[0].app[0].localAddress = "car[0]"
+*.car[*].app[0].localAddress = "car[" + string(parentIndex()) + "]"
 #*.car2.app[0].localAddress = "car2"
 *.car[*].app[0].viPort = 2222
 *.car[*].app[0].startTime = 0.05s
-*.car[0].app[0].parkTime = 40s
+*.car[*].app[0].parkTime = uniform(8s, 10s)
 
 #*.car[1].app[0].localAddress = "car[1]"
 #*.car[1].app[0].viPort = 2222
@@ -122,7 +135,7 @@ sim-time-limit=40s
 
 ##------------CAR initial position---------------
 **.car[*].mobility.initialX = 80m
-**.car[0].mobility.initialY = 280m
+**.car[*].mobility.initialY = 280m
 #**.car[1].mobility.initialY = 310m
 
 ##------------UEWarningAlertApp---------------
@@ -273,6 +286,8 @@ sim-time-limit=40s
 *.mechost*.vim.vimApp.brokerAddress = "server"
 #*.mechost*.vim.vimApp.searchType = "BEST_FIRST"
 *.mechost*.vim.vimApp.searchType = "ROUND_ROBIN"
+*.mechost*.vim.vimApp.skipLocalResources = true
+#*.mechost*.vim.vimApp.skipLocalResources = ${SKIP=true, false}
 *.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManager"
 *.mechost*.vim.vimApp.mepmPort = 3334
 *.mechost*.vim.vimApp.meoAddress = "mecOrchestrator"
