First graphs setup

--- a/simulations/downTimeDynMecHost/omnetpp.ini
+++ b/simulations/downTimeDynMecHost/omnetpp.ini
@@ -1,6 +1,6 @@
 # THE CHOICE OF THE PARAMETERS CAN BE MOTIVATED BY CITING THE PAPER: Simu5G: A system-level simulator for 5G networks
 [General]
-num-rngs = 3
+num-rngs = 20
 sim-time-limit = 60s
 output-scalar-file-append = false
 **.routingRecorder.enabled = false
@@ -69,12 +69,12 @@ output-scalar-file-append = false
 
 
 [Config TestSubscription]
-network = simulation_examples.simulations.dynamicMECHost.ParkNetwork
+network = simulation_examples.simulations.downTimeDynMecHost.ParkNetwork
 sim-time-limit=40s
 #*.gNodeB1.cellularNic.phy.
 
 ############# Repetition ##########################
-repeat = 3
+repeat = 20
 seed-set = ${runnumber}
 
 experiment-label = "${configname}"
@@ -108,7 +108,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 #**.numParkedCar = ${NUMPARKED = int($SKIP)}
 
 **.numParkedCar = 30
-**.numUe = ${NUMUE=50..200 step 50}
+**.numUe = ${NUMUE=5..40 step 5}
 #**.numUe = 100
 *.car[*].numApps = 1
 *.car[*].viApp.localPort = 2222
@@ -126,7 +126,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 #*.car2.app[0].localAddress = "car2"
 *.car[*].app[0].viPort = 2222
 *.car[*].app[0].startTime = 0.05s
-*.car[*].app[0].parkTime = uniform(8s, 10s)
+*.car[*].app[0].parkTime = uniform(5s, 10s)
 
 #*.car[1].app[0].localAddress = "car[1]"
 #*.car[1].app[0].viPort = 2222
