--- a/simulations/dynamicMECHost/omnetpp.ini
+++ b/simulations/dynamicMECHost/omnetpp.ini
@@ -74,7 +74,7 @@ sim-time-limit=40s
 #*.gNodeB1.cellularNic.phy.
 
 ############# Repetition ##########################
-repeat = 3
+repeat = 5
 seed-set = ${runnumber}
 
 experiment-label = "${configname}"
@@ -108,7 +108,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 **.numParkedCar = ${NUMPARKED = int($SKIP)}
 
 #**.numParkedCar = 1
-**.numUe = ${NUMUE=5..50 step 5}
+**.numUe = ${NUMUE=50..500 step 50}
 #**.numUe = 100
 *.car[*].numApps = 1
 *.car[*].viApp.localPort = 2222
@@ -126,7 +126,9 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 #*.car2.app[0].localAddress = "car2"
 *.car[*].app[0].viPort = 2222
 *.car[*].app[0].startTime = 0.05s
-*.car[0].app[0].parkTime = 8s
+*.car[0].app[0].parkTime = 40s
+#*.car[*].app[0].parkTime = uniform(8s, 10s)
+
 
 #*.car[1].app[0].localAddress = "car[1]"
 #*.car[1].app[0].viPort = 2222
