--- a/simulations/simulationsTesting/omnetpp.ini
+++ b/simulations/simulationsTesting/omnetpp.ini
@@ -1,6 +1,6 @@
 # THE CHOICE OF THE PARAMETERS CAN BE MOTIVATED BY CITING THE PAPER: Simu5G: A system-level simulator for 5G networks
 [General]
-num-rngs = 20
+num-rngs = 3
 sim-time-limit = 60s
 output-scalar-file-append = false
 **.routingRecorder.enabled = false
@@ -11,7 +11,7 @@ output-scalar-file-append = false
 ##########################################################
 #              Cellular network configurator             #
 ##########################################################
-*.configurator.config = xmldoc("./demo.xml")
+**.configurator.config = xmldoc("./demo.xml")
 
 ##########################################################
 #              NR specific parameters                   #
@@ -26,9 +26,10 @@ output-scalar-file-append = false
 #######################################################
 #        CA and channel model configuration           # 
 #######################################################
-*.carrierAggregation.componentCarrier[0].numerologyIndex = 2
+#
 *.carrierAggregation.numComponentCarriers = 1
 *.carrierAggregation.componentCarrier[0].numBands =  25 #${numBands=25}
+*.carrierAggregation.componentCarrier[0].numerologyIndex = 2
 
 *.*.cellularNic.LteChannelModelType = "NRChannelModel"
 *.gNodeB1.cellularNic.numCarriers = 1
@@ -66,15 +67,22 @@ output-scalar-file-append = false
 
 **.hasRNISupport = true
 
+#**.configurator.dumpRoutes = true
+#**.configurator.dumpTopology = true
+#**.configurator.dumpLinks = true
+#**.configurator.dumpAddresses = true
+
+
 
 
 [Config TestSubscription]
-network = simulation_examples.simulations.downTimeDynMecHost.ParkNetwork
+network = simulation_examples.simulations.dynamicMECHost.ParkNetwork
 sim-time-limit=40s
+
 #*.gNodeB1.cellularNic.phy.
 
 ############# Repetition ##########################
-repeat = 20
+repeat = 1
 seed-set = ${runnumber}
 
 experiment-label = "${configname}"
@@ -107,11 +115,13 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 # use this for ping time comparison graph
 #**.numParkedCar = ${NUMPARKED = int($SKIP)}
 
-**.numParkedCar = 30
-**.numUe = ${NUMUE=5..40 step 5}
+**.numParkedCar = ${NUMCARS=8}
+**.numUe = ${NUMUE=20}
+#**.parkCapacity = ${PARKCAPACITY=1000}
 #**.numUe = 100
 *.car[*].numApps = 1
 *.car[*].viApp.localPort = 2222
+*.car[0].viApp.localAddress = "car[0]"
 *.car[*].viApp.localAddress = "car[" + string(parentIndex()) + "]"
 #*.car[1].viApp.localAddress = "car[1]"
 *.car[*].viApp.vimAddress = "mechost1.vim"
@@ -122,11 +132,14 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 *.car[*].app[0].localPort = 3333
 #*.car.app[0].destPort = 3333
 *.car[*].app[0].destAddress = "server" 
+*.car[0].app[0].localAddress = "car[0]"
 *.car[*].app[0].localAddress = "car[" + string(parentIndex()) + "]"
 #*.car2.app[0].localAddress = "car2"
 *.car[*].app[0].viPort = 2222
 *.car[*].app[0].startTime = 0.05s
-*.car[*].app[0].parkTime = uniform(3s, 10s)
+#*.car[*].app[0].parkTime = 40s
+*.car[*].app[0].parkTime = uniform(2s, 14s)
+
 
 #*.car[1].app[0].localAddress = "car[1]"
 #*.car[1].app[0].viPort = 2222
@@ -329,3 +342,159 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 
 **.mechost*.mecPlatform.serviceRegistry.rng-1 = 1 # subscription service time
 **.mechost*.mecPlatform.serviceRegistry.rng-0 = 0 # request service time
+
+
+[Config TestSpawner]
+network = simulation_examples.simulations.dynamicMECHost.ParkNetworkWithSpawner
+#sim-time-limit=200s
+sim-time-limit=86400s
+
+############# Floorplan parameters ################
+**.mobility.constraintAreaMaxX = 2000m
+**.mobility.constraintAreaMaxY = 10000m
+**.mobility.constraintAreaMinX = 0m
+**.mobility.constraintAreaMinY = 250m
+**.mobility.constraintAreaMinZ = 0m
+**.mobility.constraintAreaMaxZ = 0m
+**.mobility.initFromDisplayString = false
+
+############### BS position #################
+*.gNodeB1.mobility.initialX = 139m
+*.gNodeB1.mobility.initialY = 302m
+
+#------------Server configuration---------------
+*.server.numApps = 2
+*.server.app[0].typename = "HttpBrokerApp"
+*.server.app[1].typename = "ResourceRegisterApp"
+*.server.app[1].startTime = 0.02s
+
+############# MEC Host ################
+# UALCMP config
+*.ualcmp.isMEOapp = true
+
+# MEC Orchestrator settings
+*.mecOrchestrator.meoApp.localAddress = "mecOrchestrator"
+*.mecOrchestrator.meoApp.localPort = 9876
+*.mecOrchestrator.meoApp.mecApplicationPackageList = "WarningAlertApp"
+
+## MECHost configuration
+**.mechost*.maxMECApps = 100	
+**.mechost*.eNBList = "gNodeB1"
+**.mechost*.color = "purple"
+# Vim
+*.mechost1.vim.vimApp.localAddress = "mechost1.vim"
+*.mechost1.vim.vimApp.localPort = 3333 
+*.mechost*.vim.vimApp.brokerAddress = "server"
+#*.mechost*.vim.vimApp.searchType = "BEST_FIRST"
+*.mechost*.vim.vimApp.searchType = "ROUND_ROBIN"
+#*.mechost*.vim.vimApp.skipLocalResources = true
+*.mechost*.vim.vimApp.skipLocalResources = true
+*.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManager"
+*.mechost*.vim.vimApp.mepmPort = 3334
+*.mechost*.vim.vimApp.meoAddress = "mecOrchestrator"
+*.mechost*.vim.vimApp.meoPort = 9876
+*.mechost*.vim.vimApp.mp1Address = "mechost1.mecPlatform"
+*.mechost*.vim.vimApp.mp1Port = 10021
+*.mechost1.vim.viApp.localAddress = "mechost1.vim"
+*.mechost1.vim.viApp.vimAddress = "mechost1.vim"
+*.mechost*.vim.viApp.vimPort = 3333
+#*.mechost1.vim.viApp.mp1Address = "mechost1.mecPlatform"
+#*.mechost*.vim.viApp.mp1Port = 10021
+
+# Mepm
+*.mechost1.mecPlatformManager.mepmApp.localAddress = "mechost1.mecPlatformManager"
+*.mechost*.mecPlatformManager.mepmApp.localPort = 3334
+*.mechost1.mecPlatformManager.mepmApp.vimAddress = "mechost1.vim"
+*.mechost*.mecPlatformManager.mepmApp.vimPort = 3333
+*.mechost*.mecPlatformManager.mepmApp.meoAddress = "mecOrchestrator"
+*.mechost*.mecPlatformManager.mepmApp.meoPort = 9876
+*.mechost1.mecPlatformManager.mepmApp.brokerAddress = "mechost1.mecPlatform"
+*.mechost1.mecPlatformManager.mepmApp.brokerPort = 10022
+
+# Mep
+**.mechost*.mecPlatform.numMecServices = 2
+**.mechost*.mecPlatform.mecService[0].typename = "LocationService"
+**.mechost1.mecPlatform.mecService[*].localAddress = "mechost1.mecPlatform" #da cambiare!!
+**.mechost*.mecPlatform.mecService[0].localPort = 10020
+
+**.mechost*.mecPlatform.mecService[1].typename = "ApplicationMobilityService"
+**.mechost*.mecPlatform.mecService[1].localPort = 10022
+
+**.mechost*.mecPlatform.mecService[0].rng-1 = 1 # subscription service time
+**.mechost*.mecPlatform.mecService[0].rng-0 = 0 # request service time
+**.mechost*.mecPlatform.mecService[0].requestServiceTime = 100us
+**.mechost*.mecPlatform.mecService[0].subscriptionServiceTime = 11us
+
+**.mechost1.mecPlatform.serviceRegistry.localAddress = "mechost1.mecPlatform" #da cambiare!!
+**.mechost*.mecPlatform.serviceRegistry.localPort = 10021
+
+**.mechost*.mecPlatform.serviceRegistry.rng-1 = 1 # subscription service time
+**.mechost*.mecPlatform.serviceRegistry.rng-0 = 0 # request service time
+
+
+############ PC Configuration #############
+
+*.PC*.numApps = 1
+*.PC*.viApp.localPort = 2222
+#*.PC*.viApp.localAddress = "PC" + ancestorIndex()
+*.PC*.viApp.vimAddress = "mechost1.vim"
+*.PC*.viApp.vimPort = 3333
+*.PC*.viApp.mp1Address = "mechost1.mecPlatform"
+*.PC*.viApp.mp1Port = 10021
+*.PC*.app[0].typename = "ClientResourceApp"
+*.PC*.app[0].localPort = 3333
+*.PC*.app[0].destAddress = "server" 
+#*.PC*.app[0].localAddress = "PC"
+*.PC*.app[0].viPort = 2222
+*.PC*.app[0].startTime = 0.05s
+*.PC*.app[0].parkTime = 40s
+*.PC*.mobility.initialX = 50m
+*.PC*.mobility.initialY = 302m
+*.PC*.cellularNic.nrPhy.dynamicCellAssociation = true
+*.PC*.masterId = 0     
+*.PC*.macCellId = 0    
+*.PC*.nrMasterId = 1     
+*.PC*.nrMacCellId = 1
+
+
+############ UE Configuration #############  
+**.UE*.cellularNic.numCarriers = 1
+**.UE*.cellularNic.nrChannelModel[0].componentCarrierIndex = 0
+
+**.UE*.masterId = 1    
+**.UE*.macCellId = 1   
+**.UE*.nrMasterId = 1
+**.UE*.nrMacCellId = 1
+
+**.UE*.numApps = 2
+**.UE*.app[0].typename = "DeviceApp"
+**.UE*.app[0].localPort = 4500
+**.UE*.app[0].UALCMPAddress = "ualcmp"
+**.UE*.app[0].UALCMPPort = 1000
+**.UE*.app[0].appPackageSource = "ApplicationDescriptors/WarningAlertApp.json"
+##
+**.UE*.app[1].typename = "UEWarningAlertApp"
+
+#*.UE*.app[1].deviceAppAddress = "ue[" + string(parentIndex()) + "]"
+**.UE*.app[1].amsAddress = "mechost1.mecPlatform"
+**.UE*.app[1].amsPort = 10022
+**.UE*.app[1].deviceAppPort = 4500
+**.UE*.app[1].startTime = 0.5s																			
+**.UE*.app[1].stopTime = 25s
+#
+**.UE*.app[1].positionX = 340
+**.UE*.app[1].positionY = 411
+**.UE*.app[1].radius = 30
+
+**.UE*.mobility.initialMovementHeading = 0deg
+#**.UE*.mobility.typename = "LinearMobility"
+#*.UE*.mobility.initialX = 250m
+#*.UE*.mobility.initialY = 411m
+**.UE*.mobility.speed = 10mps
+
+**.spawner.parkCapacity = ${PARKCAPACITY=100}
+**.spawner.intervalStart = 0
+#**.spawner.intervalBurst = 49
+**.spawner.intervalBurst = 3600
+#**.spawner.delta = 5
+**.spawner.delta = 600
