Added new simulation

--- a/simulations/simulationTestingAutomatic/omnetpp.ini
+++ b/simulations/simulationTestingAutomatic/omnetpp.ini
@@ -78,10 +78,11 @@ output-scalar-file-append = false
 [Config TestSubscription]
 network = simulation_examples.simulations.dynamicMECHost.ParkNetwork
 sim-time-limit=40s
+
 #*.gNodeB1.cellularNic.phy.
 
 ############# Repetition ##########################
-repeat = 2
+repeat = 1
 seed-set = ${runnumber}
 
 experiment-label = "${configname}"
@@ -114,9 +115,9 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 # use this for ping time comparison graph
 #**.numParkedCar = ${NUMPARKED = int($SKIP)}
 
-#**.numParkedCar = ${NUMCARS=150..200 step 50}
-**.numParkedCar = ${NUMCARS=150..200 step 50}
-**.numUe = ${NUMUE=50..400 step 50}
+**.numParkedCar = ${NUMCARS=8}
+**.numUe = ${NUMUE=20}
+#**.parkCapacity = ${PARKCAPACITY=1000}
 #**.numUe = 100
 *.car[*].numApps = 1
 *.car[*].viApp.localPort = 2222
@@ -136,14 +137,11 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 #*.car2.app[0].localAddress = "car2"
 *.car[*].app[0].viPort = 2222
 *.car[*].app[0].startTime = 0.05s
-*.car[*].app[0].parkTime = 40s
-#*.car[*].app[0].parkTime = uniform(8s, 10s)
+#*.car[*].app[0].parkTime = 40s
+*.car[*].app[0].parkTime = uniform(2s, 14s)
 
 
-#*.car[1].app[0].localAddress = "car[1]"
-#*.car[1].app[0].viPort = 2222
-#*.car[1].app[0].startTime = 0.05s
-#*.car[1].app[0].parkTime = 30s
+
 
 ##------------CAR initial position---------------
 **.car[*].mobility.initialX = 80m
@@ -164,26 +162,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 
 *.ue[0].app[1].deviceAppAddress = "ue[0]"
 *.ue[*].app[1].deviceAppAddress = "ue[" + string(parentIndex()) + "]"
-#*.ue[1].app[1].deviceAppAddress = "ue[1]"
-#*.ue[2].app[1].deviceAppAddress = "ue[2]"
-#*.ue[3].app[1].deviceAppAddress = "ue[3]"
-#*.ue[4].app[1].deviceAppAddress = "ue[4]"
-#*.ue[5].app[1].deviceAppAddress = "ue[5]"
-#*.ue[6].app[1].deviceAppAddress = "ue[6]"
-#*.ue[7].app[1].deviceAppAddress = "ue[7]"
-#*.ue[8].app[1].deviceAppAddress = "ue[8]"
-#*.ue[9].app[1].deviceAppAddress = "ue[9]"
-#*.ue[10].app[1].deviceAppAddress = "ue[10]"
-#*.ue[11].app[1].deviceAppAddress = "ue[11]"
-#*.ue[12].app[1].deviceAppAddress = "ue[12]"
-#*.ue[13].app[1].deviceAppAddress = "ue[13]"
-#*.ue[14].app[1].deviceAppAddress = "ue[14]"
-#*.ue[15].app[1].deviceAppAddress = "ue[15]"
-#*.ue[16].app[1].deviceAppAddress = "ue[16]"
-#*.ue[17].app[1].deviceAppAddress = "ue[17]"
-#*.ue[18].app[1].deviceAppAddress = "ue[18]"
-#*.ue[19].app[1].deviceAppAddress = "ue[19]"
-#*.ue[20].app[1].deviceAppAddress = "ue[20]"
+
 
 *.ue[*].app[1].amsAddress = "mechost1.mecPlatform"
 *.ue[*].app[1].amsPort = 10022
@@ -298,8 +277,8 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 *.mechost*.vim.vimApp.brokerAddress = "server"
 #*.mechost*.vim.vimApp.searchType = "BEST_FIRST"
 *.mechost*.vim.vimApp.searchType = "ROUND_ROBIN"
-#*.mechost*.vim.vimApp.skipLocalResources = true
-*.mechost*.vim.vimApp.skipLocalResources = ${SKIP=true, false}
+*.mechost*.vim.vimApp.skipLocalResources = true
+#*.mechost*.vim.vimApp.skipLocalResources = ${SKIP=true, false}
 *.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManager"
 *.mechost*.vim.vimApp.mepmPort = 3334
 *.mechost*.vim.vimApp.meoAddress = "mecOrchestrator"
@@ -345,7 +324,8 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 
 [Config TestSpawner]
 network = simulation_examples.simulations.dynamicMECHost.ParkNetworkWithSpawner
-sim-time-limit=300s
+#sim-time-limit=82800s
+sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 
 ############# Floorplan parameters ################
 **.mobility.constraintAreaMaxX = 2000m
@@ -431,6 +411,7 @@ sim-time-limit=300s
 
 
 ############ PC Configuration #############
+
 *.PC*.numApps = 1
 *.PC*.viApp.localPort = 2222
 #*.PC*.viApp.localAddress = "PC" + ancestorIndex()
@@ -444,7 +425,7 @@ sim-time-limit=300s
 #*.PC*.app[0].localAddress = "PC"
 *.PC*.app[0].viPort = 2222
 *.PC*.app[0].startTime = 0.05s
-*.PC*.app[0].parkTime = 40s
+#*.PC*.app[0].parkTime = 40s
 *.PC*.mobility.initialX = 50m
 *.PC*.mobility.initialY = 302m
 *.PC*.cellularNic.nrPhy.dynamicCellAssociation = true
@@ -477,7 +458,8 @@ sim-time-limit=300s
 **.UE*.app[1].amsPort = 10022
 **.UE*.app[1].deviceAppPort = 4500
 **.UE*.app[1].startTime = 0.5s																			
-**.UE*.app[1].stopTime = 25s
+#**.UE*.app[1].stopTime = 300s
+**.UE*.app[1].stopTime = uniform(200s, 350s)
 #
 **.UE*.app[1].positionX = 340
 **.UE*.app[1].positionY = 411
@@ -489,6 +471,14 @@ sim-time-limit=300s
 #*.UE*.mobility.initialY = 411m
 **.UE*.mobility.speed = 10mps
 
-**.spawner.intervalStart = 0
-**.spawner.intervalBurst = 10
-**.spawner.delta = 5
+**.spawner.initFromFile = true
+
+#**.fileParameters = ${FILE= ($TIMELINE)}
+**.spawner.parkCapacity = ${PARKCAPACITY=100}
+**.spawner.initTimeLine = ${TIMELINE = 11..18}
+**.spawner.initialParkedCars = 5
+**.spawner.intervalStart = ${INTERVALSTART = ($TIMELINE) * 3600}
+#**.spawner.intervalBurst = 49
+**.spawner.intervalBurst = 3600
+#**.spawner.delta = 5
+**.spawner.delta = 600
