--- a/simulations/simulationsTesting/omnetpp.ini
+++ b/simulations/simulationsTesting/omnetpp.ini
@@ -141,10 +141,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 *.car[*].app[0].parkTime = uniform(2s, 14s)
 
 
-#*.car[1].app[0].localAddress = "car[1]"
-#*.car[1].app[0].viPort = 2222
-#*.car[1].app[0].startTime = 0.05s
-#*.car[1].app[0].parkTime = 30s
+
 
 ##------------CAR initial position---------------
 **.car[*].mobility.initialX = 80m
@@ -165,26 +162,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 
 *.ue[0].app[1].deviceAppAddress = "ue[0]"
 *.ue[*].app[1].deviceAppAddress = "ue[" + string(parentIndex()) + "]"
-#*.ue[1].app[1].deviceAppAddress = "ue[1]"
-#*.ue[2].app[1].deviceAppAddress = "ue[2]"
-#*.ue[3].app[1].deviceAppAddress = "ue[3]"
-#*.ue[4].app[1].deviceAppAddress = "ue[4]"
-#*.ue[5].app[1].deviceAppAddress = "ue[5]"
-#*.ue[6].app[1].deviceAppAddress = "ue[6]"
-#*.ue[7].app[1].deviceAppAddress = "ue[7]"
-#*.ue[8].app[1].deviceAppAddress = "ue[8]"
-#*.ue[9].app[1].deviceAppAddress = "ue[9]"
-#*.ue[10].app[1].deviceAppAddress = "ue[10]"
-#*.ue[11].app[1].deviceAppAddress = "ue[11]"
-#*.ue[12].app[1].deviceAppAddress = "ue[12]"
-#*.ue[13].app[1].deviceAppAddress = "ue[13]"
-#*.ue[14].app[1].deviceAppAddress = "ue[14]"
-#*.ue[15].app[1].deviceAppAddress = "ue[15]"
-#*.ue[16].app[1].deviceAppAddress = "ue[16]"
-#*.ue[17].app[1].deviceAppAddress = "ue[17]"
-#*.ue[18].app[1].deviceAppAddress = "ue[18]"
-#*.ue[19].app[1].deviceAppAddress = "ue[19]"
-#*.ue[20].app[1].deviceAppAddress = "ue[20]"
+
 
 *.ue[*].app[1].amsAddress = "mechost1.mecPlatform"
 *.ue[*].app[1].amsPort = 10022
@@ -346,7 +324,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 
 [Config TestSpawner]
 network = simulation_examples.simulations.dynamicMECHost.ParkNetworkWithSpawner
-#sim-time-limit=200s
+#sim-time-limit=82800s
 sim-time-limit=86400s
 
 ############# Floorplan parameters ################
@@ -447,7 +425,7 @@ sim-time-limit=86400s
 #*.PC*.app[0].localAddress = "PC"
 *.PC*.app[0].viPort = 2222
 *.PC*.app[0].startTime = 0.05s
-*.PC*.app[0].parkTime = 40s
+#*.PC*.app[0].parkTime = 40s
 *.PC*.mobility.initialX = 50m
 *.PC*.mobility.initialY = 302m
 *.PC*.cellularNic.nrPhy.dynamicCellAssociation = true
@@ -480,7 +458,8 @@ sim-time-limit=86400s
 **.UE*.app[1].amsPort = 10022
 **.UE*.app[1].deviceAppPort = 4500
 **.UE*.app[1].startTime = 0.5s																			
-**.UE*.app[1].stopTime = 25s
+#**.UE*.app[1].stopTime = 300s
+**.UE*.app[1].stopTime = uniform(200s, 350s)
 #
 **.UE*.app[1].positionX = 340
 **.UE*.app[1].positionY = 411
@@ -492,8 +471,11 @@ sim-time-limit=86400s
 #*.UE*.mobility.initialY = 411m
 **.UE*.mobility.speed = 10mps
 
+**.fileParameters = ${FILE=17}
 **.spawner.parkCapacity = ${PARKCAPACITY=100}
-**.spawner.intervalStart = 0
+**.spawner.initTimeLine = 23
+**.spawner.initialParkedCars = 35
+**.spawner.intervalStart = 82800
 #**.spawner.intervalBurst = 49
 **.spawner.intervalBurst = 3600
 #**.spawner.delta = 5
